<resources>
    <string name="app_name">GEORGIAN CONNECT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="nav_item_nearby">Georgians Nearby</string>
    <string name="nav_item_proffesionls">Professionals to know</string>
    <string name="nav_item_batchmates">Batchmates</string>
    <string name="nav_item_housemates">Housemates</string>
    <string name="nav_item_schoolmates">Schoolmates</string>
    <string name="nav_item_directory">Directory</string>
    <string name="nav_item_newsevents">News &amp; Events</string>
    <string name="nav_item_invite">Invite Others</string>
    <string name="welcome">Welcome!</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_nearby</item>
        <item>@string/nav_item_proffesionls</item>
        <item>@string/nav_item_batchmates</item>
        <item>@string/nav_item_housemates</item>
        <item>@string/nav_item_schoolmates</item>
        <item>@string/nav_item_directory</item>
        <item>@string/nav_item_newsevents</item>
        <item>@string/nav_item_invite</item>
    </string-array>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyA6PYP2NoxIzraSIKimEQaS6XPgRGImlTk
    </string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="login">LOGIN</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="password_limit">Password (Max 8 char)</string>
    <string name="show_password">Show Password</string>
    <string name="intro_code">Introduction Code</string>
    <string name="submit">SUBMIT</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="click_here"><u>Click Here</u></string>
    <string name="splash_text">A bond beyond time</string>
    <string name="splash_button">ENTER ></string>
    <string name="app_info">Get connected instantly to ex-Georgians across the globe.</string>
    <string name="app_info1">ex-Georgians across the globe.</string>
    <string name="atyour_fingertips">At your fingertips : </string>
    <string name="georgian_nearby">Georgian Nearby</string>
    <string name="proffesionals_to_know">Proffesioinals to Know</string>
    <string name="batchmates">Batchmates</string>
    <string name="more">&amp; \n More</string>
    <string name="signup">SIGN UP</string>
    <string name="terms_con">By Tapping "Sign Up" above you are agreeing to the</string>
    <string name="loading">Loading</string>
    <string name="success">SUCCESS !</string>
    <string name="fail">OOPS !</string>
    <string name="check_code">Please check your invitation code</string>
    <string name="try_again">TRY AGAIN ></string>
    <string name="verification_code">Enter the verification code</string>
    <string name="tc_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="incomplete_profile">Your profile is incomplete please fill in the details below.</string>
    <string name="school_details">SCHOOL DETAILS</string>
    <string name="current_address">CURRENT ADDRESS ></string>
    <string name="proffesional_details">PROFFESIONAL DETAILS ></string>
    <string name="address_line1">Address Line1 (Home No., Flat NO., Housing Society)</string>
    <string name="address_line2">Address Line2 (Locality)</string>
    <string name="pincode">Pincode</string>
    <string name="town_city">Town / City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="save_address">SAVE ADDRESS ></string>
    <string name="get_connected_instantly">Get connected instantly</string>
    <string name="rollno">Roll No.</string>
    <string name="edit">Edit</string>
    <string name="school">School</string>
    <string name="school2">School2</string>
    <string name="school3">School3</string>
    <string name="school4">School4</string>
    <string name="school5">School5</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="house">House</string>
    <string name="house2">House2</string>
    <string name="house3">House3</string>
    <string name="house4">House4</string>
    <string name="house5">House5</string>
    <string name="description">Description</string>
    <string name="select_school">Select School</string>
    <string name="select_house">Select House</string>
    <string name="more_school"><u>More than one School</u></string>
    <string name="more_house"><u>More than one House</u></string>
    <string name="remove_house"><u>Remove House</u></string>
    <string name="remove_school"><u>Remove School</u></string>
    <string-array name="salutation">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Miss</item>
        <item>Dr.</item>
        <item>Ms.</item>
        <item>Prof.</item>
        <item>Rev.</item>
        <item>Lady</item>
        <item>Sir</item>
        <item>Capt.</item>
        <item>Major</item>
        <item>Lt.-Col.</item>
        <item>Col.</item>
        <item>Lady</item>
        <item>Lt.-Cmdr.</item>
        <item>The Hon.</item>
        <item>Cmdr.</item>
        <item>Flt. Lt.</item>
        <item>Brgdr.</item>
        <item>Judge</item>
        <item>Lord</item>
        <item>The Hon. Mrs</item>
        <item>Wng. Cmdr.</item>
        <item>Group Capt.</item>
        <item>Rt. Hon. Lord</item>
        <item>Revd. Father</item>
        <item>Revd Canon</item>
        <item>Maj.-Gen.</item>
        <item>Air Cdre.</item>
        <item>Viscount</item>
        <item>Dame</item>
        <item>Rear Admrl.</item>
    </string-array>
    <string name="industry">Industry</string>
    <string name="organisation">Organisation</string>
    <string name="designation">Current Designation</string>
    <string name="save_details">Save Details</string>
    <string name="select_batch">Select Batch</string>
    <string name="select_industry">Select Industry</string>
    <string name="find">FIND ></string>
    <string name="search_again">SEARCH AGAIN ></string>
    <string name="searchText">Search</string>
    <string name="invite_theading">SEND YOUR INVITE CODE</string>
    <string name="invite_code">59106</string>
    <string name="whatsapp_invite">Whatsapp Invite</string>
    <string name="email_invite">Email Invite</string>
    <string name="message_invite">Text Invite</string>
    <string name="invite_tc">* Please Share only with legitimate Georgians.\n Sharing invitation codes with non-Georgians will lead to blacklisting.</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string-array name="school_name">
        <item>RMS Ajmer</item>
        <item>RMS Banglore</item>
        <item>RMS Belgaum</item>
        <item>RMS Chail</item>
        <item>RMS Dholpur</item>
    </string-array>
    <string-array name="house_ajmer">
        <item>House1</item>
        <item>House2</item>
        <item>House3</item>
        <item>House4</item>
        <item>House5</item>
    </string-array>
    <string-array name="house_banglore">
        <item>House6</item>
        <item>House7</item>
        <item>House8</item>
        <item>House9</item>
        <item>House10</item>
    </string-array>
    <string-array name="house_belgaum">
        <item>House11</item>
        <item>House12</item>
        <item>House13</item>
        <item>House14</item>
        <item>House15</item>
    </string-array>
    <string-array name="house_chail">
        <item>House16</item>
        <item>House17</item>
        <item>House18</item>
        <item>House19</item>
        <item>House20</item>
    </string-array>
    <string-array name="house_dholpur">
        <item>House21</item>
        <item>House22</item>
        <item>House23</item>
        <item>House24</item>
        <item>House25</item>
    </string-array>
</resources>