<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/size10">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/size5"
            android:layout_marginTop="@dimen/size5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_theading"
                android:id="@+id/tvInviteHeader"
                android:textSize="@dimen/size18"
                android:textIsSelectable="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size5"
            android:layout_marginBottom="@dimen/size5"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_code"
                android:id="@+id/tvInviteCode"
                android:textSize="@dimen/size18" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size5"
            android:layout_marginBottom="@dimen/size5">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whatsapp_invite"
                android:id="@+id/btnWatsappShare"
                android:layout_marginTop="@dimen/size5"
                android:layout_marginBottom="@dimen/size5"
                android:drawableLeft="@drawable/mail_icon"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_invite"
                android:id="@+id/btnEmailShare"
                android:layout_marginTop="@dimen/size5"
                android:layout_marginBottom="@dimen/size5"
                android:drawableLeft="@drawable/mail_icon"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_invite"
                android:id="@+id/btnMessageShare"
                android:layout_marginTop="@dimen/size5"
                android:drawableLeft="@drawable/mail_icon"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10"
            android:layout_marginBottom="@dimen/size10"
            android:baselineAligned="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invite_tc"
                android:id="@+id/tvInvitetc"
                android:textSize="@dimen/size12"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>