<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_info"
                android:textSize="@dimen/size20"
                android:layout_marginTop="@dimen/size20"
                android:layout_marginBottom="@dimen/size20"
                android:id="@+id/tvInfo" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/size10"
            android:layout_marginBottom="@dimen/size10"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atyour_fingertips"
                android:textSize="@dimen/size22"
                android:id="@+id/tvfingertips" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/size10"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/georgian_nearby"
                    android:drawableLeft="@drawable/badge_sa"
                    android:drawablePadding="@dimen/size20"
                    android:id="@+id/tvGeorgianNearby"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/menu_text"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/size10"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proffesionals_to_know"
                    android:drawableLeft="@drawable/badge_nsw"
                    android:drawablePadding="@dimen/size20"
                    android:id="@+id/tvProffesionals"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/menu_text"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/size5"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batchmates"
                    android:drawableLeft="@drawable/badge_qld"
                    android:drawablePadding="@dimen/size20"
                    android:id="@+id/tvBatchmates"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/menu_text"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/size10"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvMore"
                    android:text="@string/more"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/menu_text"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSignup"
                android:textSize="@dimen/size24"
                android:paddingLeft="@dimen/button_padding_side"
                android:paddingRight="@dimen/button_padding_side"
                android:text="@string/signup"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/size20"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_con"
                android:textSize="@dimen/size16"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textSize="@dimen/size16"
                android:id="@+id/btnTc"
                android:inputType="text"
                android:text="Terms of Service"></Button>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>